[PC] Introduce LogBuffer and LoggerUI
push data to buffer and display in resizable window

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,5 +4,15 @@ Size=400,400
 
 [Window][Hello]
 Pos=60,60
-Size=667,495
+Size=681,473
+
+[Window][Logger]
+Pos=60,60
+Size=1717,1211
+
+[Table][0x1F619553,3]
+RefScale=13
+Column 0  Width=120
+Column 1  Width=120
+Column 2  Weight=1.0000
 
